src/snapshots/purs_oxide__parser__tests__do_let.snap
---
source: src/parser.rs
expression: "parse_expr(indoc!(\"\n          do\n            let x = 1\n            pure 2\n        \"))"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 0,
        end: 24,
    },
    Do(
        [
            Let(
                [
                    Located(
                        SourceSpan {
                            decl: Module(
                                ModuleId {
                                    name: "Test",
                                },
                            ),
                            start: 9,
                            end: 14,
                        },
                        Commented(
                            [],
                            ValueDeclaration(
                                ValueDeclaration {
                                    ident: Symbol {
                                        text: "x",
                                    },
                                    params: [],
                                    expr: Unconditional(
                                        Located(
                                            SourceSpan {
                                                decl: Module(
                                                    ModuleId {
                                                        name: "Test",
                                                    },
                                                ),
                                                start: 13,
                                                end: 14,
                                            },
                                            Literal(
                                                Integer(
                                                    1,
                                                ),
                                            ),
                                        ),
                                    ),
                                },
                            ),
                        ),
                    ),
                ],
            ),
            Expr(
                Located(
                    SourceSpan {
                        decl: Module(
                            ModuleId {
                                name: "Test",
                            },
                        ),
                        start: 17,
                        end: 23,
                    },
                    App(
                        Located(
                            SourceSpan {
                                decl: Module(
                                    ModuleId {
                                        name: "Test",
                                    },
                                ),
                                start: 17,
                                end: 21,
                            },
                            Var(
                                QualifiedName {
                                    module: None,
                                    name: Symbol {
                                        text: "pure",
                                    },
                                },
                            ),
                        ),
                        [
                            Located(
                                SourceSpan {
                                    decl: Module(
                                        ModuleId {
                                            name: "Test",
                                        },
                                    ),
                                    start: 22,
                                    end: 23,
                                },
                                Literal(
                                    Integer(
                                        2,
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
            ),
        ],
    ),
)
