src/snapshots/purs_oxide__parser__tests__do_simple.snap
---
source: src/parser.rs
expression: "parse_expr(indoc!(\"\n          do\n            x <- f\n            pure 1\n        \"))"
---
Located(
    SourceSpan {
        start: 0,
        end: 21,
    },
    Do(
        [
            Bind(
                Located(
                    SourceSpan {
                        start: 5,
                        end: 6,
                    },
                    Var(
                        Symbol {
                            text: "x",
                        },
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 10,
                        end: 11,
                    },
                    Var(
                        QualifiedName {
                            module: None,
                            name: Symbol {
                                text: "f",
                            },
                        },
                    ),
                ),
            ),
            Expr(
                Located(
                    SourceSpan {
                        start: 14,
                        end: 20,
                    },
                    App(
                        Located(
                            SourceSpan {
                                start: 14,
                                end: 18,
                            },
                            Var(
                                QualifiedName {
                                    module: None,
                                    name: Symbol {
                                        text: "pure",
                                    },
                                },
                            ),
                        ),
                        [
                            Located(
                                SourceSpan {
                                    start: 19,
                                    end: 20,
                                },
                                Literal(
                                    Integer(
                                        1,
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
            ),
        ],
    ),
)
