src/snapshots/purs_oxide__parser__tests__export_list.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(\"\n          module Control.Applicative\n            ( class Applicative\n            , pure\n            , module Data.Functor\n            , Either\n            , Foo(..)\n            , Maybe(Just, Nothing)\n            , (+~)\n            , type (<>)\n            ) where\n\n        \"))"
---
Located(
    SourceSpan {
        start: 0,
        end: 162,
    },
    Commented(
        [],
        ModuleInner {
            name: QualifiedName {
                symbol: Symbol {
                    [salsa id]: 0,
                    text: "Control.Applicative",
                },
                actually_qualified: true,
            },
            exports: Some(
                [
                    Located(
                        SourceSpan {
                            start: 31,
                            end: 48,
                        },
                        TypeClass {
                            name: Symbol {
                                [salsa id]: 1,
                                text: "Applicative",
                            },
                        },
                    ),
                    Located(
                        SourceSpan {
                            start: 53,
                            end: 57,
                        },
                        Value {
                            name: Symbol {
                                [salsa id]: 2,
                                text: "pure",
                            },
                        },
                    ),
                    Located(
                        SourceSpan {
                            start: 62,
                            end: 81,
                        },
                        Module {
                            name: QualifiedName {
                                symbol: Symbol {
                                    [salsa id]: 3,
                                    text: "Data.Functor",
                                },
                                actually_qualified: true,
                            },
                        },
                    ),
                    Located(
                        SourceSpan {
                            start: 86,
                            end: 92,
                        },
                        Type {
                            name: Symbol {
                                [salsa id]: 4,
                                text: "Either",
                            },
                            constructors: None,
                        },
                    ),
                    Located(
                        SourceSpan {
                            start: 97,
                            end: 104,
                        },
                        Type {
                            name: Symbol {
                                [salsa id]: 5,
                                text: "Foo",
                            },
                            constructors: Some(
                                All,
                            ),
                        },
                    ),
                    Located(
                        SourceSpan {
                            start: 109,
                            end: 129,
                        },
                        Type {
                            name: Symbol {
                                [salsa id]: 6,
                                text: "Maybe",
                            },
                            constructors: Some(
                                Some(
                                    [
                                        Symbol {
                                            [salsa id]: 7,
                                            text: "Just",
                                        },
                                        Symbol {
                                            [salsa id]: 8,
                                            text: "Nothing",
                                        },
                                    ],
                                ),
                            ),
                        },
                    ),
                    Located(
                        SourceSpan {
                            start: 134,
                            end: 138,
                        },
                        ValueOp {
                            name: Symbol {
                                [salsa id]: 9,
                                text: "+~",
                            },
                        },
                    ),
                    Located(
                        SourceSpan {
                            start: 143,
                            end: 152,
                        },
                        TypeOp {
                            name: Symbol {
                                [salsa id]: 10,
                                text: "<>",
                            },
                        },
                    ),
                ],
            ),
            imports: [],
            declarations: [],
        },
    ),
)
