src/snapshots/purs_oxide__parser__tests__fat_arrows_as_operators.snap
---
source: src/parser.rs
expression: "parse_expr(r#\"1 <= 2 >= 3\"#)"
---
Located(
    SourceSpan {
        start: 0,
        end: 11,
    },
    Infix(
        Located(
            SourceSpan {
                start: 0,
                end: 1,
            },
            Literal(
                Integer(
                    1,
                ),
            ),
        ),
        [
            (
                Symbol(
                    QualifiedName {
                        [salsa id]: 0,
                        module: None,
                        name: Symbol {
                            [salsa id]: 0,
                            text: "<=",
                        },
                    },
                ),
                Located(
                    SourceSpan {
                        start: 5,
                        end: 6,
                    },
                    Literal(
                        Integer(
                            2,
                        ),
                    ),
                ),
            ),
            (
                Symbol(
                    QualifiedName {
                        [salsa id]: 1,
                        module: None,
                        name: Symbol {
                            [salsa id]: 1,
                            text: ">=",
                        },
                    },
                ),
                Located(
                    SourceSpan {
                        start: 10,
                        end: 11,
                    },
                    Literal(
                        Integer(
                            3,
                        ),
                    ),
                ),
            ),
        ],
    ),
)
