src/snapshots/purs_oxide__parser__tests__foreign_import.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(r#\"\n            module Test where\n            foreign import foo :: Int -> Int\n        \"#))"
---
Located(
    SourceSpan {
        start: 0,
        end: 51,
    },
    Commented(
        [],
        ModuleInner {
            name: QualifiedName {
                symbol: Symbol {
                    [salsa id]: 0,
                    text: "Test",
                },
                actually_qualified: false,
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        start: 18,
                        end: 50,
                    },
                    Commented(
                        [],
                        ForeignValue {
                            name: Symbol {
                                [salsa id]: 1,
                                text: "foo",
                            },
                            type_: Located(
                                SourceSpan {
                                    start: 40,
                                    end: 50,
                                },
                                FunctionType(
                                    Located(
                                        SourceSpan {
                                            start: 40,
                                            end: 43,
                                        },
                                        TypeConstructor(
                                            QualifiedName {
                                                symbol: Symbol {
                                                    [salsa id]: 2,
                                                    text: "Int",
                                                },
                                                actually_qualified: false,
                                            },
                                        ),
                                    ),
                                    Located(
                                        SourceSpan {
                                            start: 47,
                                            end: 50,
                                        },
                                        TypeConstructor(
                                            QualifiedName {
                                                symbol: Symbol {
                                                    [salsa id]: 2,
                                                    text: "Int",
                                                },
                                                actually_qualified: false,
                                            },
                                        ),
                                    ),
                                ),
                            ),
                        },
                    ),
                ),
            ],
        },
    ),
)
