src/snapshots/purs_oxide__parser__tests__fundeps_1.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(r#\"\n            module Test where\n            class Foo a b | a -> b where\n        \"#))"
---
Located(
    SourceSpan {
        start: 0,
        end: 47,
    },
    Commented(
        [],
        ModuleInner {
            name: QualifiedName {
                symbol: Symbol {
                    [salsa id]: 0,
                    text: "Test",
                },
                actually_qualified: false,
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        start: 18,
                        end: 47,
                    },
                    Commented(
                        [],
                        Class(
                            TypeClassDeclaration {
                                constraints: [],
                                name: Symbol {
                                    [salsa id]: 1,
                                    text: "Foo",
                                },
                                params: [
                                    (
                                        Symbol {
                                            [salsa id]: 2,
                                            text: "a",
                                        },
                                        None,
                                    ),
                                    (
                                        Symbol {
                                            [salsa id]: 3,
                                            text: "b",
                                        },
                                        None,
                                    ),
                                ],
                                fundeps: [
                                    Fundep {
                                        from: [
                                            Symbol {
                                                [salsa id]: 2,
                                                text: "a",
                                            },
                                        ],
                                        to: [
                                            Symbol {
                                                [salsa id]: 3,
                                                text: "b",
                                            },
                                        ],
                                    },
                                ],
                                methods: [],
                            },
                        ),
                    ),
                ),
            ],
        },
    ),
)
